# beat

./: .gitignore  README.md  build-debug.bat  build.bat  deploy.bat  launch-uidesc-editor.bat  push-first.bat  release.bat
vst3/: CMakeLists.txt  beat.uidesc  beat.uidesc.in
vst3/cmake/: GenerateUIDesc.cmake  ImportUIDesc.cmake
vst3/src/: BeatController.cpp  BeatController.h  BeatEngine.cpp  BeatEngine.h  BeatIDs.h  BeatPluginFactory.cpp  BeatProcessor.cpp  BeatProcessor.h  BeatView.h
